--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		<!-- slider-start -->
 		<div class="slider-area">
 			<div class="slider-active">
-				<div class="single-slider slider-height d-flex align-items-center" style="background-image:url(img/slider/slider1.jpg)">
+				<div class="single-slider slider-height d-flex align-items-center" style="background-image:url(img/slider/Carmen_Slider_1.jpg)">
 				   <div class="container">
 					   <div class="row ">
 						   <div class="col-xl-12">
