--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Netaji - Political & Election HTML5 Template</title>
+        <title>Carmen Montano For Mayor</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -50,13 +50,13 @@
 								<nav id="mobile-menu">
 									<ul>
 										<li class="active"><a href="index.html">HOME </a>
-											<ul class="sub-menu text-left">
+<!-- 											<ul class="sub-menu text-left">
 												<li><a href="index.html">home 1</a></li>
 												<li><a href="index-2.html">home 2</a></li>
 												<li><a href="index-3.html">home 3</a></li>
-											</ul>
+											</ul> -->
 										</li>
-										<li><a href="about-us.html">ABOUT US</a></li>
+										<li><a href="about-us.html">ABOUT ME</a></li>
 										<li><a href="events-grid.html">EVENTS</a>
 											<ul class="sub-menu text-left">
 												<li><a href="events-grid.html">events grid</a></li>
@@ -177,9 +177,9 @@
 					   <div class="row ">
 						   <div class="col-xl-12">
 								<div class="slider-content">
-									<h1 data-animation="fadeInUp" data-delay=".4s">Let's make the <br> great country</h1>
-									<p data-animation="fadeInUp" data-delay=".6s">But I must explain to you how all this mistaken idea of denouncing pleasure and prai sing pain was born and I will give you a complete account.</p>
-									<a data-animation="fadeInUp" data-delay=".8s" class="btn" href="#">join with us</a>
+									<h1 data-animation="fadeInUp" data-delay=".4s">Milpitas  <br> Families First</h1>
+									<p data-animation="fadeInUp" data-delay=".6s">Join me to improve on the quality of life for our residents and families of our great City of Milpitas!</p>
+									<!-- <a data-animation="fadeInUp" data-delay=".8s" class="btn" href="#">join with us</a> -->
 								</div>
 						   </div>
 					   </div>
@@ -239,7 +239,7 @@
 							</div>
 							<div class="feature-content">
 								<h2>Our Campaign</h2>
-								<p>But I must explain to you how this taken idea of denouncing pleasure and praising pain was born and I will give you a coplete account of the system expound </p>
+								<!-- <p>But I must explain to you how this taken idea of denouncing pleasure and praising pain was born and I will give you a coplete account of the system expound </p> -->
 								<a class="btn" href="#">read more</a>
 							</div>
 						</div>
@@ -405,7 +405,7 @@
 		<!-- services-area-end -->
 
 		<!-- counter-area-start -->
-		<div class="counter-area pt-140 pb-110" style="background-image:url(img/bg/1.jpg)">
+<!-- 		<div class="counter-area pt-140 pb-110" style="background-image:url(img/bg/1.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-3 cl-lg-3 col-md-6">
@@ -442,11 +442,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- counter-area-end -->
 
 		<!-- event-area-start -->
-		<div class="event-area gray-bg pt-110 pb-120">
+		<!-- <div class="event-area gray-bg pt-110 pb-120">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -514,7 +514,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- event-area-end -->
 
 		<!-- volunteer-area-start -->
@@ -599,7 +599,7 @@
 		<!-- testimonial-area-end -->
 
 		<!-- blog-area-start -->
-		<div class="blog-area pb-90 pt-110 gray-bg">
+		<!-- <div class="blog-area pb-90 pt-110 gray-bg">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -635,11 +635,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- blog-area-end -->
 
 		<!-- subscribe-area-start -->
-		<div class="subscribe-area pt-110 pb-115" style="background-image:url(img/bg/3.jpg)">
+<!-- 		<div class="subscribe-area pt-110 pb-115" style="background-image:url(img/bg/3.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-8 col-lg-8 offset-lg-2 offset-xl-2">
@@ -660,7 +660,7 @@
                     </div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- subscribe-area-end -->
 
 		<!-- footer-area-start -->
