--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="section-title text-center mb-60">
-							<h1>The job of a leader is to love his country <br> and people of the country</h1>
+							<h1>As a Milpitas Native, I have dedicated my <br> whole life to serving our fellow neighbors</h1>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+<!-- 				<div class="row">
 					<div class="col-xl-4 col-lg-4 col-md-6">
 						<div class="feature-wrapper text-center mb-30">
 							<div class="feature-item">
@@ -239,7 +239,7 @@
 							</div>
 							<div class="feature-content">
 								<h2>Our Campaign</h2>
-								<!-- <p>But I must explain to you how this taken idea of denouncing pleasure and praising pain was born and I will give you a coplete account of the system expound </p> -->
+								<p>But I must explain to you how this taken idea of denouncing pleasure and praising pain was born and I will give you a coplete account of the system expound </p> 
 								<a class="btn" href="#">read more</a>
 							</div>
 						</div>
@@ -279,12 +279,12 @@
 								<a class="btn" href="#">read more</a>
 							</div>
 						</div>
-					</div>
-					<div class="col-xl-12 mt-25">
+					</div> -->
+<!-- 					<div class="col-xl-12 mt-25">
 						<div class="feature-info text-center">
 							<p>But I must explain to you how all <a href="#">Our timeline</a> dea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
