--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@
 		<!-- feature-area-end -->
 
 		<!-- donation-area-start -->
-		<div class="donation-area pt-240 pb-140" style="background-image:url(img/bg/4.jpg)">
+		<div class="donation-area pt-240 pb-140" style="background-image:url(img/group2.png)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6">
 						<div class="donation-wrapper">
 							<div class="donation-text">
-								<h1>Join Our Activities <br> By a Donation</h1>
-								<p>But I must explain to you how all this mistaken idea of denople asure and praising pain was born and I will give you a complete.</p>
+								<h1>Support Me <br> With a Donation</h1>
+<!-- 								<p>But I must explain to you how all this mistaken idea of denople asure and praising pain was born and I will give you a complete.</p>
 								<div class="donation-button donation-button2">
 									<button>$15</button>
 									<button>$50</button>
@@ -306,7 +306,7 @@
 								</div>
 								<div class="cart-plus-minus">
 									<input type="text" value="02" name="qtybutton" class="cart-plus-minus-box">
-								</div>
+								</div> -->
 								<a class="btn" href="#">donate now</a>
 							</div>
 						</div>
@@ -334,8 +334,8 @@
 							</div>
 							<div class="services-text">
 								<h2>Economic Progress</h2>
-								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
-								<a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a>
+								<p>Attract well-compensated jobs in our city and maintain fiscal accountability of taxpayer funds</p>
+								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -345,9 +345,9 @@
 								<img src="img/service/2.png" alt="" />
 							</div>
 							<div class="services-text">
-								<h2>Education Progress</h2>
-								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
-								<a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a>
+								<h2>Education</h2>
+								<p>Continue our partnership with the school district to provide the best possible Education to our diverse community. Also provide grants for social and emotional initiatives that benefit our school children and families</p>
+								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -358,8 +358,8 @@
 							</div>
 							<div class="services-text">
 								<h2>Accomodation</h2>
-								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
-								<a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a>
+								<p>Continue to enact policies that provide more affordable housing and collaborate with the county to assist our unhoused residents</p>
+								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -371,7 +371,7 @@
 							<div class="services-text">
 								<h2>Medical Care</h2>
 								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
-								<a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a>
+								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -381,21 +381,22 @@
 								<img src="img/service/5.png" alt="" />
 							</div>
 							<div class="services-text">
-								<h2>Clothes For Human</h2>
-								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
-								<a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a>
+								<h2>Recreation</h2>
+								<p>Enhance and maintain our parks and streetscapes. Provide opportunities for youth sports. Plan for a future Community Museum and Theatre for the Performing arts</p>
+								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
 					</div>
 					<div class="col-xl-4 col-lg-4 col-md-6">
 						<div class="services-wrapper text-center mb-70">
 							<div class="services-img">
-								<img src="img/service/6.png" alt="" />
+								<img src="img/service/7.png" alt="" />
 							</div>
 							<div class="services-text">
-								<h2>Healthy Foods</h2>
-								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
-								<a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a>
+								<h2>Public Safety</h2>
+								<p>Continue to have a comprehensive well trained Police and Fire Department to protect and serve our community
+</p>
+								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -530,7 +531,7 @@
 					</div>
 					<div class="col-xl-6 col-lg-6 d-lg-none d-xl-block">
 						<div class="volunteer-img">
-							<img src="img/bg/become_vo.png" alt="">
+							<img src="img/volunteer1.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -743,7 +744,7 @@
 					<div class="row">
 						<div class="col-xl-6 col-lg-6">
 							<div class="copyright">
-								<p><i class="far fa-copyright"></i> 2018 Your Company. All Rights Reserved. Designed By <a href="#">BDevs.</a></p>
+								<p><i class="far fa-copyright"></i> 2022 Carmen Montano For Milpitas. All Rights Reserved.</a></p>
 							</div>
 						</div>
 						<div class="col-xl-6 col-lg-6">
