--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					   </div>
 				   </div>
 				</div>
-				<div class="single-slider slider-height d-flex align-items-center" style="background-image:url(img/slider/slider1.jpg)">
+<!-- 				<div class="single-slider slider-height d-flex align-items-center" style="background-image:url(img/slider/slider1.jpg)">
 				   <div class="container">
 					   <div class="row ">
 						   <div class="col-xl-12">
@@ -210,7 +210,7 @@
 						   </div>
 					   </div>
 				   </div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!-- slider-start -->
