--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="section-title text-center mb-60">
-							<h1>A leader can change his country and condition <br> of the people. <span>What we do</span></h1>
+							<h1>A leader with a proven history <br> of service. <span>What I've accomplished</span></h1>
 						</div>
 					</div>
 				</div>
