png to jpg conversion since it didnt show up

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 		<!-- feature-area-end -->
 
 		<!-- donation-area-start -->
-		<div class="donation-area pt-240 pb-140" style="background-image:url(img/group2.png)">
+		<div class="donation-area pt-240 pb-140" style="background-image:url(img/group2.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6">
