--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-3 col-lg-3">
-							<div class="logo">
+<!-- 							<div class="logo">
 								<a href="index.html"><img src="img/logo/logo.png" alt="" /></a>
-							</div>
+							</div> -->
 						</div>
 						<div class="col-xl-9 col-lg-9">
 							<div class="menu-bar info-bar text-right d-none d-md-none d-lg-block">
