--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						   <div class="col-xl-12">
 								<div class="slider-content">
 									<h1 data-animation="fadeInUp" data-delay=".4s">Milpitas  <br> Families First</h1>
-									<p data-animation="fadeInUp" data-delay=".6s">Join me to improve on the quality of life for our residents and families of our great City of Milpitas!</p>
+<!-- 									<p data-animation="fadeInUp" data-delay=".6s">Join me to improve on the quality of life for our residents and families of our great City of Milpitas!</p> -->
 									<!-- <a data-animation="fadeInUp" data-delay=".8s" class="btn" href="#">join with us</a> -->
 								</div>
 						   </div>
@@ -545,7 +545,7 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="section-title text-center mb-60">
-							<h1>People love me very much. What <br> people say about me</h1>
+							<h1>Milpitas Citizens Love Me. <br> Here's what they said</h1>
 						</div>
 					</div>
 				</div>
