--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="section-title text-center mb-60">
-							<h1>A leader with a proven history <br> of service. <span>What I've accomplished</span></h1>
+							<h1>A leader with a proven history <br> of service. <span>Here are my goals</span></h1>
 						</div>
 					</div>
 				</div>
@@ -545,7 +545,7 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="section-title text-center mb-60">
-							<h1>Milpitas Citizens Love Me. <br> Here's what they said</h1>
+							<h1>Here's what Milpitas Citizens. <br> Say about me</h1>
 						</div>
 					</div>
 				</div>
