--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
 								<img src="img/service/4.png" alt="" />
 							</div>
 							<div class="services-text">
-								<h2>Medical Care</h2>
-								<p>But I must explain to you how all this mista en idea of denouncing pleasure and praising pain was born and I will give</p>
+								<h2>Emergency Services</h2>
+								<p>Continue to have a comprehensive well trained and well funded fire and emergency services department to protect and serve our community</p>
 								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
 						</div>
@@ -378,7 +378,7 @@
 					<div class="col-xl-4 col-lg-4 col-md-6">
 						<div class="services-wrapper text-center mb-70">
 							<div class="services-img">
-								<img src="img/service/5.png" alt="" />
+								<img src="img/recreation.jpg" alt="" />
 							</div>
 							<div class="services-text">
 								<h2>Recreation</h2>
@@ -393,8 +393,8 @@
 								<img src="img/service/7.png" alt="" />
 							</div>
 							<div class="services-text">
-								<h2>Public Safety</h2>
-								<p>Continue to have a comprehensive well trained Police and Fire Department to protect and serve our community
+								<h2>Law Enforcement</h2>
+								<p>Continue to have a comprehensive well trained and funded Police Department to respond to crimes in a timely manner in order to protect and serve our community
 </p>
 								<!-- <a href="#">read more<i class="fas fa-long-arrow-alt-right"></i></a> -->
 							</div>
