--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
 		<!-- volunteer-area-end -->
 
 		<!-- testimonial-area-start -->
+		<!--
 		<div class="testimonial-area pt-110 pb-120">
 			<div class="container">
 				<div class="row">
@@ -596,7 +597,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- testimonial-area-end -->
 
 		<!-- blog-area-start -->
