--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 												<li><a href="index-3.html">home 3</a></li>
 											</ul> -->
 										</li>
-										<li><a href="about-us.html">ABOUT ME</a></li>
+										<li><a href="about-me.html">ABOUT ME</a></li>
 										<li><a href="events-grid.html">EVENTS</a>
 											<ul class="sub-menu text-left">
 												<li><a href="events-grid.html">events grid</a></li>
