--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Netaji - Political & Election HTML5 Template</title>
+        <title>Carmen Montano For Mayor</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +33,7 @@
 		<!-- header-start -->
 		<header>
 			<!-- header-top-area-start -->
-			<div class="header-top-area pt-15 pb-15 gray-bg">
+<!-- 			<div class="header-top-area pt-15 pb-15 gray-bg">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-6 col-lg-6 col-md-6">
@@ -57,14 +57,14 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- header-top-area-end -->
 			<div id="sticky-header" class="main-menu-area black-menu">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
 							<div class="logo logo2">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
+								<a href="index.html"><img src="img/vice-mayor.jpeg" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
