--- a/about-me.html
+++ b/about-me.html
@@ -72,20 +72,20 @@
 								<nav id="mobile-menu">
 									<ul>
 										<li class="active"><a href="index.html">HOME </a>
-											<ul class="sub-menu text-left">
+<!-- 											<ul class="sub-menu text-left">
 												<li><a href="index.html">home 1</a></li>
 												<li><a href="index-2.html">home 2</a></li>
 												<li><a href="index-3.html">home 3</a></li>
-											</ul>
+											</ul> -->
 										</li>
-										<li><a href="about-us.html">ABOUT US</a></li>
-										<li><a href="events-grid.html">EVENTS</a>
+										<li><a href="about-us.html">ABOUT Me</a></li>
+<!-- 										<li><a href="events-grid.html">EVENTS</a>
 											<ul class="sub-menu text-left">
 												<li><a href="events-grid.html">events grid</a></li>
 												<li><a href="events-list.html">events list</a></li>
 												<li><a href="events-details.html">events details</a></li>
 											</ul>
-										</li>
+										</li> -->
 										<li><a href="#">Pages</a>
 											<ul class="sub-menu text-left">
 												<li><a href="issue-01.html">issue 01</a></li>
