--- a/about-me.html
+++ b/about-me.html
@@ -408,7 +408,7 @@
 		<!-- counter-area-end -->
 
 		<!-- testimonial-area-start -->
-		<div class="testimonial-area pt-110 pb-120">
+		<!-- <div class="testimonial-area pt-110 pb-120">
 			<div class="container">
 				<div class="container">
 					<div class="row">
@@ -467,11 +467,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- testimonial-area-end -->
 
 		<!-- brand-area-start -->
-		<div class="brand-area pt-95 pb-95 gray-bg">
+		<!-- <div class="brand-area pt-95 pb-95 gray-bg">
 			<div class="container">
 				<div class="row">
 					<div class="brand-active owl-carousel">
@@ -508,11 +508,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- brand-area-end -->
 
 		<!-- footer-area-start -->
-		<footer>
+		<!-- <footer>
 			<div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
 				<div class="container">
 					<div class="row">
@@ -585,13 +585,13 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="footer-bottom-area footer-bottom-white blue3-bg pt-25 pb-25">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-6 col-lg-6">
 							<div class="copyright">
-								<p><i class="far fa-copyright"></i> 2018 Your Company. All Rights Reserved. Designed By <a href="#">BDevs.</a></p>
+								<p><i class="far fa-copyright"></i> 2022 Carmen Montano For Milpitas. All Rights Reserved.</a></p>
 							</div>
 						</div>
 						<div class="col-xl-6 col-lg-6">
