--- a/about-me.html
+++ b/about-me.html
@@ -64,7 +64,7 @@
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
 							<div class="logo logo2">
-								<a href="index.html"><img src="img/vice-mayor.jpeg" alt="" /></a>
+								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
@@ -160,7 +160,7 @@
 					</div>
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
-							<img src="img/about/1.jpg" alt="">
+							<img src="img/vice-mayor.jpeg" alt="">
 						</div>
 					</div>
 				</div>
