--- a/about-me.html
+++ b/about-me.html
@@ -129,7 +129,7 @@
 		<!-- header-end -->
 
 		<!-- breadcrumb-area-start -->
-		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/8.jpg)">
+<!-- 		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/8.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -143,7 +143,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- breadcrumb-area-end -->
 
 		<!-- about-me-area-start -->
@@ -169,7 +169,7 @@
 		<!-- about-me-area-end -->
 
 		<!-- we-do-area-start -->
-		<div class="we-do-area we-do-circle pt-110 pb-200 gray-bg">
+		<!-- <div class="we-do-area we-do-circle pt-110 pb-200 gray-bg">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -292,11 +292,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- we-do-area-end -->
 
 		<!-- team-area-start -->
-		<div class="team-area pt-110 pb-90">
+		<!-- <div class="team-area pt-110 pb-90">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -363,11 +363,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- team-area-end -->
 
 		<!-- counter-area-start -->
-		<div class="counter-area pt-140 pb-110" style="background-image:url(img/bg/1.jpg)">
+<!-- 		<div class="counter-area pt-140 pb-110" style="background-image:url(img/bg/1.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-3 cl-lg-3 col-md-6">
@@ -404,7 +404,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- counter-area-end -->
 
 		<!-- testimonial-area-start -->
