--- a/about-me.html
+++ b/about-me.html
@@ -153,8 +153,12 @@
 					<div class="col-xl-5 col-lg-5">
 						<div class="about2-me-wrapper mb-30">
 							<div class="about-me-content">
-								<h1>The job of a leader is love country & people of the country</h1>
-								<p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great. </p>
+								<h1>A Milpitas Native Dedicated To Her City</h1>
+								<p>
+  I am a 3rd generation Californian, my grandparents came from Texas. They moved to California during the Great Depression of the 1930's and settled in the Central Valley. Both my parents were born in Texas. They were farm workers and owned a small farm where they planted cotton. We lived in Earlimart, a small town near Delano, where Cesar Chavez founded the UFW-United Farm Workers Union. 
+<br>
+
+  In 1964, my family moved to Milpitas. As a teenager, the only place to shop was the Fremont Hub. During our summer breaks, my mom would take us to pick walnuts in Irvington and the Mission District, we also cut apricots at the Weller Ranch so we could earn money to buy our school clothes. My early years gave me my hard work ethic. My mother only had a third-grade education, but she had the most common sense approach to life and I learned from her the value of hard work. I have in turn instilled those values into my children. We are three generations in this Valley.</p>
 							</div>
 						</div>
 					</div>
