--- a/about-me.html
+++ b/about-me.html
@@ -155,10 +155,29 @@
 							<div class="about-me-content">
 								<h1>A Milpitas Native Dedicated To Her City</h1>
 								<p>
-  I am a 3rd generation Californian, my grandparents came from Texas. They moved to California during the Great Depression of the 1930's and settled in the Central Valley. Both my parents were born in Texas. They were farm workers and owned a small farm where they planted cotton. We lived in Earlimart, a small town near Delano, where Cesar Chavez founded the UFW-United Farm Workers Union. 
+  I am a 3rd generation Californian, my grandparents came from Texas. They moved to California during the Great Depression of the 1930's and settled in the Central Valley. Both my parents were born in Texas. They were farm workers and owned a small farm where they planted cotton. We lived in Earlimart, a small town near Delano, where Cesar Chavez founded the UFW-United Farm Workers Union. </p>
 <br>
-
+<br>
+<p>
   In 1964, my family moved to Milpitas. As a teenager, the only place to shop was the Fremont Hub. During our summer breaks, my mom would take us to pick walnuts in Irvington and the Mission District, we also cut apricots at the Weller Ranch so we could earn money to buy our school clothes. My early years gave me my hard work ethic. My mother only had a third-grade education, but she had the most common sense approach to life and I learned from her the value of hard work. I have in turn instilled those values into my children. We are three generations in this Valley.</p>
+  <br>
+  <br>
+  <strong>How It all Began</strong>
+
+<br>
+<br>
+<p>
+  During the recession of the early 1980's, our city cut services in the Sunnyhills neighborhood where I grew up. When the economy improved, the city did not maintain Sunnyhills as they did newer neighborhoods. I felt the city was neglecting our area simply because it was an older neighborhood. Since I was a kid, I've always had an affinity towards social justice. Seeing this inequity in my neighborhood compelled me to do something about it, and that was the pivotal moment that led to my involvement in public service. I asked my good friend Bob Pecot (now deceased) if he would help me form a neighborhood group to address the needs of our neighborhood. We formed the Sunnyhills Improvement Association. Advocacy is what makes cities accountable to the people. Bob Pecot used to say, "The squeaky wheel gets the grease". I find that still holds true today. </p>  
+<br>
+<br>
+<p>
+  During this time of organizing and advocacy, I was a single mom raising two children. While working and attending San Jose State University, I had the tenacity and drive to persevere in my efforts to improve my neighborhood. It is what drew me into community service in 1992. This was the same year I graduated from SJSU with a Bachelor of Arts degree in Humanities. I then became a Teacher and have been teaching for over 27 years.
+</p>
+<br>
+<br>
+<p>
+  Due to my efforts, I was invited by former Mayor Pete McHugh to serve on the Parks and Recreation Commission. From there I went on to serve on the Library Commission, and the Planning Commission. I was elected to the School Board in the year 2000-2008. I was elected to the Milpitas City Council in 2012 and served as Vice Mayer 2014-2016. I was re-elected in 2018. Most recently on the City Council, I formed two subcommittees: the Housing Subcommittee and the Transportation Subcommittee On the Housing Subcommittee, I helped create the Milpitas Assistance Program to subsidize utilities, after school care, rent mediation and a rent relief program for families facing financial hardships, and other initiatives like Beautify Milpitas, Street Sweeping Pilot Program, Mural Ordinance, Revitalization of Historic Main Street, and more... 
+</p>
 							</div>
 						</div>
 					</div>
