--- a/about-me.html
+++ b/about-me.html
@@ -178,6 +178,11 @@
 <p>
   Due to my efforts, I was invited by former Mayor Pete McHugh to serve on the Parks and Recreation Commission. From there I went on to serve on the Library Commission, and the Planning Commission. I was elected to the School Board in the year 2000-2008. I was elected to the Milpitas City Council in 2012 and served as Vice Mayer 2014-2016. I was re-elected in 2018. Most recently on the City Council, I formed two subcommittees: the Housing Subcommittee and the Transportation Subcommittee On the Housing Subcommittee, I helped create the Milpitas Assistance Program to subsidize utilities, after school care, rent mediation and a rent relief program for families facing financial hardships, and other initiatives like Beautify Milpitas, Street Sweeping Pilot Program, Mural Ordinance, Revitalization of Historic Main Street, and more... 
 </p>
+<br>
+<br>
+<strong>Now I am running for Mayor.</strong>
+<p>
+ As the Vice Mayor of Milpitas, I have gained the experience, knowledge, and skills to lead in that capacity. In my role, I have initiated "Out of the Box" solutions and I will do the same as Mayor. I am a problem solver and will put forth innovative ideas that will enhance the quality of life for everyone. I have the Experience, the Courage, and the Tenacity to get get things done. I tend to look at the big picture and take proactive approaches when making decisions. I am ready to serve you, the citizens of Milpitas! I would be honored to have your VOTE on November 8, 2022.</p>
 							</div>
 						</div>
 					</div>
