--- a/about-me.html
+++ b/about-me.html
@@ -63,9 +63,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
-							<div class="logo logo2">
+							<!-- <div class="logo logo2">
 								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
-							</div>
+							</div> -->
 						</div>
 						<div class="col-xl-7 col-lg-7">
 							<div class="main-menu text-right">
@@ -181,6 +181,8 @@
 <br>
 <br>
 <strong>Now I am running for Mayor.</strong>
+<br>
+<br>
 <p>
  As the Vice Mayor of Milpitas, I have gained the experience, knowledge, and skills to lead in that capacity. In my role, I have initiated "Out of the Box" solutions and I will do the same as Mayor. I am a problem solver and will put forth innovative ideas that will enhance the quality of life for everyone. I have the Experience, the Courage, and the Tenacity to get get things done. I tend to look at the big picture and take proactive approaches when making decisions. I am ready to serve you, the citizens of Milpitas! I would be honored to have your VOTE on November 8, 2022.</p>
 							</div>
