--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 												<li><a href="index-3.html">home 3</a></li>
 											</ul> -->
 										</li>
-										<li><a href="about-me.html">ABOUT ME</a></li>
-										<li><a href="events-grid.html">EVENTS</a>
+										<li><a href="about-me.html">ABOUT CARMEN</a></li>
+<!-- 										<li><a href="events-grid.html">EVENTS</a>
 											<ul class="sub-menu text-left">
 												<li><a href="events-grid.html">events grid</a></li>
 												<li><a href="events-list.html">events list</a></li>
 												<li><a href="events-details.html">events details</a></li>
 											</ul>
-										</li>
-										<li><a href="#">Pages</a>
+										</li> -->
+<!-- 										<li><a href="#">Pages</a>
 											<ul class="sub-menu text-left">
 												<li><a href="issue-01.html">issue 01</a></li>
 												<li><a href="issue-02.html">issue 02</a></li>
@@ -86,7 +86,7 @@
 												<li><a href="blog-with-sidebar.html">blog with sidebar</a></li>
 												<li><a href="blog-details.html">blog details</a></li>
 											</ul>
-										</li>
+										</li> -->
 										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
