--- a/index.html
+++ b/index.html
@@ -750,14 +750,14 @@
 								<p><i class="far fa-copyright"></i> 2022 Carmen Montano For Milpitas. All Rights Reserved.</a></p>
 							</div>
 						</div>
-						<div class="col-xl-6 col-lg-6">
+<!-- 						<div class="col-xl-6 col-lg-6">
 							<ul class="footer-footer-link text-lg-right">
 								<li><a href="#">Privacy & Policy </a></li>
 								<li><a href="#"> Setting </a></li>
 								<li><a href="#"> Contact Us </a></li>
 								<li><a href="#">Blog & News</a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
