--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 								</nav>
 							</div>
 						</div>
-<!-- 						<div class="col-12">
+						<div class="col-12">
 							<div class="mobile-menu"></div>
-						</div> -->
+						</div>
 					</div>
 				</div>
 			</div>
