--- a/about-me.html
+++ b/about-me.html
@@ -59,47 +59,47 @@
 				</div>
 			</div> -->
 			<!-- header-top-area-end -->
-			<div id="sticky-header" class="main-menu-area black-menu">
+			<div id="sticky-header" class="main-menu-area black-menu">                          
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
-							<!-- <div class="logo logo2">
+							<div class="logo logo2">
 								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
-							</div> -->
+							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
 							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
-										<li class="active"><a href="index.html">HOME </a>
-<!-- 											<ul class="sub-menu text-left">
+										<li class="active"><a href="index.html">HOME </a>                                           
+											<ul class="sub-menu text-left">
 												<li><a href="index.html">home 1</a></li>
 												<li><a href="index-2.html">home 2</a></li>
 												<li><a href="index-3.html">home 3</a></li>
-											</ul> -->
+											</ul>
 										</li>
-										<li><a href="about-us.html">ABOUT CARMEN</a></li>
-<!-- 										<li><a href="events-grid.html">EVENTS</a>
+										<li><a href="about-us.html">ABOUT US</a></li>
+										<li><a href="events-grid.html">EVENTS</a>
 											<ul class="sub-menu text-left">
 												<li><a href="events-grid.html">events grid</a></li>
 												<li><a href="events-list.html">events list</a></li>
 												<li><a href="events-details.html">events details</a></li>
 											</ul>
-										</li> -->
-<!-- 										<li><a href="#">Pages</a>
+										</li>
+										<li><a href="#">Pages</a>
 											<ul class="sub-menu text-left">
 												<li><a href="issue-01.html">issue 01</a></li>
 												<li><a href="issue-02.html">issue 02</a></li>
 												<li><a href="issue-details.html">issue details</a></li>
 												<li><a href="donation-form.html">donation form</a></li>
-												<li><a href="donation-landing.html">donation landing</a></li>
-												<li><a href="donation-details.html">donation details</a></li>
-												<li><a href="our-volunteer.html">our volunteer</a></li>
-												<li><a href="volunteer-become.html">volunteer become</a></li>
-												<li><a href="biography.html">biography</a></li>
-												<li><a href="faq.html">faq</a></li>
-												<li><a href="error.html">error</a></li>
-												<li><a href="contact-02.html">contact 02</a></li>
+												<li><a href="donation-landing.html">donation landing</a></li>			
+												<li><a href="donation-details.html">donation details</a></li>			
+												<li><a href="our-volunteer.html">our volunteer</a></li>			
+												<li><a href="volunteer-become.html">volunteer become</a></li>			
+												<li><a href="biography.html">biography</a></li>			
+												<li><a href="faq.html">faq</a></li>			
+												<li><a href="error.html">error</a></li>			
+												<li><a href="contact-02.html">contact 02</a></li>			
 											</ul>
 										</li>
 										<li><a href="blog-grid.html">NEWS</a>
@@ -108,8 +108,8 @@
 												<li><a href="blog-with-sidebar.html">blog with sidebar</a></li>
 												<li><a href="blog-details.html">blog details</a></li>
 											</ul>
-										</li> -->
-										<li><a href="contact-01.html">CONTACT ME</a></li>
+										</li>
+										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
 							</div>
