--- a/index.html
+++ b/index.html
@@ -31,53 +31,47 @@
 
 
 		<!-- header-start -->
-		<header class="header-transparent">
-			<div id="sticky-header" class="main-menu-area pt-40">
+			<div id="sticky-header" class="main-menu-area black-menu">                          
 				<div class="container">
 					<div class="row">
-						<div class="col-xl-3 col-lg-3">
-<!-- 							<div class="logo">
-								<a href="index.html"><img src="img/logo/logo.png" alt="" /></a>
-							</div> -->
-						</div>
-						<div class="col-xl-9 col-lg-9">
-							<div class="menu-bar info-bar text-right d-none d-md-none d-lg-block">
-								<span class="bar1"></span>
-								<span class="bar2"></span>
-								<span class="bar3"></span>
+						<div class="col-xl-2 col-lg-2">
+							<div class="logo logo2">
+								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
 							</div>
-							<div class="main-menu text-right f-right">
+						</div>
+						<div class="col-xl-7 col-lg-7">
+							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
-										<li class="active"><a href="index.html">HOME </a>
-<!-- 											<ul class="sub-menu text-left">
+										<li class="active"><a href="index.html">HOME </a>                                           
+											<ul class="sub-menu text-left">
 												<li><a href="index.html">home 1</a></li>
 												<li><a href="index-2.html">home 2</a></li>
 												<li><a href="index-3.html">home 3</a></li>
-											</ul> -->
+											</ul>
 										</li>
-										<li><a href="about-me.html">ABOUT CARMEN</a></li>
-<!-- 										<li><a href="events-grid.html">EVENTS</a>
+										<li><a href="about-us.html">ABOUT US</a></li>
+										<li><a href="events-grid.html">EVENTS</a>
 											<ul class="sub-menu text-left">
 												<li><a href="events-grid.html">events grid</a></li>
 												<li><a href="events-list.html">events list</a></li>
 												<li><a href="events-details.html">events details</a></li>
 											</ul>
-										</li> -->
-<!-- 										<li><a href="#">Pages</a>
+										</li>
+										<li><a href="#">Pages</a>
 											<ul class="sub-menu text-left">
 												<li><a href="issue-01.html">issue 01</a></li>
 												<li><a href="issue-02.html">issue 02</a></li>
 												<li><a href="issue-details.html">issue details</a></li>
 												<li><a href="donation-form.html">donation form</a></li>
-												<li><a href="donation-landing.html">donation landing</a></li>
-												<li><a href="donation-details.html">donation details</a></li>
-												<li><a href="our-volunteer.html">our volunteer</a></li>
-												<li><a href="volunteer-become.html">volunteer become</a></li>
-												<li><a href="biography.html">biography</a></li>
-												<li><a href="faq.html">faq</a></li>
-												<li><a href="error.html">error</a></li>
-												<li><a href="contact-02.html">contact 02</a></li>
+												<li><a href="donation-landing.html">donation landing</a></li>			
+												<li><a href="donation-details.html">donation details</a></li>			
+												<li><a href="our-volunteer.html">our volunteer</a></li>			
+												<li><a href="volunteer-become.html">volunteer become</a></li>			
+												<li><a href="biography.html">biography</a></li>			
+												<li><a href="faq.html">faq</a></li>			
+												<li><a href="error.html">error</a></li>			
+												<li><a href="contact-02.html">contact 02</a></li>			
 											</ul>
 										</li>
 										<li><a href="blog-grid.html">NEWS</a>
@@ -86,10 +80,15 @@
 												<li><a href="blog-with-sidebar.html">blog with sidebar</a></li>
 												<li><a href="blog-details.html">blog details</a></li>
 											</ul>
-										</li> -->
+										</li>
 										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
+							</div>
+						</div>
+						<div class="col-xl-3 col-lg-3">
+							<div class="header-button text-right d-none d-md-none d-lg-block">
+								<a class="btn" href="#">donate now</a>
 							</div>
 						</div>
 						<div class="col-12">
@@ -98,7 +97,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="extra-info">
+		</header>
+<!-- 			<div class="extra-info">
 				<div class="close-icon">
 					<button>
 						<i class="far fa-window-close"></i>
@@ -166,7 +166,7 @@
 					</a>
 				</div>
 			</div>
-		</header>
+		</header> -->
 		<!-- header-end -->
 
 		<!-- slider-start -->
