--- a/about-me.html
+++ b/about-me.html
@@ -63,9 +63,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
-<!-- 							<div class="logo logo2">
+							<div class="logo logo2">
 								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
-							</div> -->
+							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
 							<div class="main-menu text-right">
