--- a/contact-01.html
+++ b/contact-01.html
@@ -129,16 +129,16 @@
 		<!-- header-end -->
 		
 		<!-- breadcrumb-area-start -->
-		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/8.jpg)">
+		<div class="breadcrumb-area pt-250 pb-250">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="breadcrumb-text text-center">
-							<h1>Contact us 01</h1>
-							<ul class="breadcrumb-menu">
+							<h1>Contact Me </h1>
+<!-- 							<ul class="breadcrumb-menu">
 								<li><a href="index.html">home</a></li>
 								<li><span>Contact us 01</span></li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 				</div>
@@ -150,7 +150,7 @@
 		<div class="contact-area pt-120 pb-90">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-5 col-lg-5">
+<!-- 					<div class="col-xl-5 col-lg-5">
 						<div class="contact-wrapper mb-30">
 							<h1 class="contact-title">Get In Touch</h1>
 							<div class="contact-text">
@@ -172,13 +172,15 @@
 								</ul>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="col-xl-7 col-lg-7">
 						<div class="contact2-wrapper mb-30">
 							<h1 class="contact-title">Contact Us</h1>
 							<form action="assets/mail.php" id="contact-form">
 								<div class="row">
-									<div class="col-xl-12 mb-20">
+									<p> ilovemilpitas3@gmail.com </p>
+									<p> 669-454-7874 </p>
+<!-- 									<div class="col-xl-12 mb-20">
 										<input name="name" placeholder="Name :" type="text">
 									</div>
 									<div class="col-xl-12 mb-30">
@@ -189,7 +191,7 @@
 									</div>
 									<div class="col-xl-12">
 										<button class="btn" type="submit">Send message</button>
-									</div>
+									</div> -->
 								</div>
 								<p class="form-message"></p>
 							</form>
@@ -209,7 +211,7 @@
 		<!-- map-area-end -->
 		
 		<!-- footer-area-start -->
-		<footer>
+<!-- 		<footer>
 			<div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
 				<div class="container">
 					<div class="row">
@@ -282,7 +284,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="footer-bottom-area footer-bottom-white blue3-bg pt-25 pb-25">
 				<div class="container">
 					<div class="row">
