--- a/contact-01.html
+++ b/contact-01.html
@@ -129,7 +129,7 @@
 		<!-- header-end -->
 		
 		<!-- breadcrumb-area-start -->
-		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/group1.jpg)">
+		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/group1.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
