--- a/about-me.html
+++ b/about-me.html
@@ -31,34 +31,6 @@
 
 
 		<!-- header-start -->
-		<header>
-			<!-- header-top-area-start -->
-<!-- 			<div class="header-top-area pt-15 pb-15 gray-bg">
-				<div class="container">
-					<div class="row">
-						<div class="col-xl-6 col-lg-6 col-md-6">
-							<div class="header-wrapper">
-								<div class="header-text">
-									<span><i class="fas fa-headphones"></i> +000 (123) 456 77</span>
-									<span><i class="fas fa-envelope"></i> suport@gmail.com</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-6 col-lg-6 col-md-6">
-							<div class="header-wrapper">
-								<div class="header-icon text-md-right">
-								   <a href="#"><i class="fab fa-facebook-f"></i></a>
-								   <a href="#"><i class="fab fa-twitter"></i></a>
-								   <a href="#"><i class="fab fa-google-plus-g"></i></a>
-								   <a href="#"><i class="fab fa-instagram"></i></a>
-								   <a href="#"><i class="fab fa-dribbble"></i></a>
-							   </div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div> -->
-			<!-- header-top-area-end -->
 			<div id="sticky-header" class="main-menu-area black-menu">                          
 				<div class="container">
 					<div class="row">
@@ -71,7 +43,10 @@
 							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
+										<li class="active"><a href="index.html">HOME </a>                                           
+										</li>
 										<li><a href="about-me.html">ABOUT ME</a></li>
+
 										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
