--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 					<div class="col-xl-6 col-lg-6 d-flex align-items-center">
 						<div class="volunteer-text pt-80 pb-80">
 							<h1>Become <br> A Volunteer</h1>
-							<p>But I must explain to you how all this mistaken idea of denople asure and praising pain was born and I willcomplete.</p>
+							<!-- <p>But I must explain to you how all this mistaken idea of denople asure and praising pain was born and I willcomplete.</p> -->
 							<a class="btn" href="#">join volunteer</a>
 						</div>
 					</div>
