--- a/contact-01.html
+++ b/contact-01.html
@@ -129,7 +129,7 @@
 		<!-- header-end -->
 		
 		<!-- breadcrumb-area-start -->
-		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/group1.jpg)">
+		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/1.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -179,6 +179,8 @@
 							<form action="assets/mail.php" id="contact-form">
 								<div class="row">
 									<p> ilovemilpitas3@gmail.com </p>
+									<br>
+									<br>
 									<p> 669-454-7874 </p>
 <!-- 									<div class="col-xl-12 mb-20">
 										<input name="name" placeholder="Name :" type="text">
@@ -203,11 +205,11 @@
 		<!-- contact-area-end -->
 		
 		<!-- map-area-start -->
-		<div class="map-area">
+<!-- 		<div class="map-area">
 			<div class="map2-wrapper">
 				<div id="contact-map" class="map"></div>
 			</div>
-		</div>
+		</div> -->
 		<!-- map-area-end -->
 		
 		<!-- footer-area-start -->
