--- a/contact-01.html
+++ b/contact-01.html
@@ -33,38 +33,14 @@
 		<!-- header-start -->
 		<header>
 			<!-- header-top-area-start -->
-			<div class="header-top-area pt-15 pb-15 gray-bg">
-				<div class="container">
-					<div class="row">
-						<div class="col-xl-6 col-lg-6 col-md-6">
-							<div class="header-wrapper">
-								<div class="header-text">
-									<span><i class="fas fa-headphones"></i> +000 (123) 456 77</span>
-									<span><i class="fas fa-envelope"></i> suport@gmail.com</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-6 col-lg-6 col-md-6">
-							<div class="header-wrapper">
-								<div class="header-icon text-md-right">
-								   <a href="#"><i class="fab fa-facebook-f"></i></a>
-								   <a href="#"><i class="fab fa-twitter"></i></a>
-								   <a href="#"><i class="fab fa-google-plus-g"></i></a>
-								   <a href="#"><i class="fab fa-instagram"></i></a>
-								   <a href="#"><i class="fab fa-dribbble"></i></a>
-							   </div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+
 			<!-- header-top-area-end -->
 			<div id="sticky-header" class="main-menu-area black-menu">                          
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
 							<div class="logo logo2">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
+								<a href="index.html"><img src="img/logo/test.png" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
@@ -72,43 +48,9 @@
 								<nav id="mobile-menu">
 									<ul>
 										<li class="active"><a href="index.html">HOME </a>                                           
-											<ul class="sub-menu text-left">
-												<li><a href="index.html">home 1</a></li>
-												<li><a href="index-2.html">home 2</a></li>
-												<li><a href="index-3.html">home 3</a></li>
-											</ul>
 										</li>
-										<li><a href="about-us.html">ABOUT US</a></li>
-										<li><a href="events-grid.html">EVENTS</a>
-											<ul class="sub-menu text-left">
-												<li><a href="events-grid.html">events grid</a></li>
-												<li><a href="events-list.html">events list</a></li>
-												<li><a href="events-details.html">events details</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Pages</a>
-											<ul class="sub-menu text-left">
-												<li><a href="issue-01.html">issue 01</a></li>
-												<li><a href="issue-02.html">issue 02</a></li>
-												<li><a href="issue-details.html">issue details</a></li>
-												<li><a href="donation-form.html">donation form</a></li>
-												<li><a href="donation-landing.html">donation landing</a></li>			
-												<li><a href="donation-details.html">donation details</a></li>			
-												<li><a href="our-volunteer.html">our volunteer</a></li>			
-												<li><a href="volunteer-become.html">volunteer become</a></li>			
-												<li><a href="biography.html">biography</a></li>			
-												<li><a href="faq.html">faq</a></li>			
-												<li><a href="error.html">error</a></li>			
-												<li><a href="contact-02.html">contact 02</a></li>			
-											</ul>
-										</li>
-										<li><a href="blog-grid.html">NEWS</a>
-											<ul class="sub-menu text-left">
-												<li><a href="blog-grid.html">blog grid</a></li>
-												<li><a href="blog-with-sidebar.html">blog with sidebar</a></li>
-												<li><a href="blog-details.html">blog details</a></li>
-											</ul>
-										</li>
+										<li><a href="about-me.html">ABOUT ME</a></li>
+
 										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
