--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 
 		<!-- header-start -->
+		<header>
 			<div id="sticky-header" class="main-menu-area black-menu">                          
 				<div class="container">
 					<div class="row">
