--- a/contact-01.html
+++ b/contact-01.html
@@ -137,10 +137,9 @@
 									</div> -->
 								</div>
 								<p class="form-message"></p>
-								<p> ilovemilpitas3@gmail.com </p>
+								<p>Email: ilovemilpitas3@gmail.com </p>
 								<br>
-									<br>
-									<p> 669-454-7874 </p>
+									<p>Phone: 669-454-7874 </p>
 							</form>
 						</div>
 					</div>
