--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
-										<li class="active"><a href="index.html">HOME </a>                                           
+																				<li class="active"><a href="index.html">HOME </a>                                           
 										</li>
 										<li><a href="about-me.html">ABOUT ME</a></li>
-
+										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
 										<li><a href="contact-01.html">CONTACT US</a></li>
+
 									</ul>
 								</nav>
 							</div>
