--- a/contact-01.html
+++ b/contact-01.html
@@ -50,7 +50,7 @@
 										<li class="active"><a href="index.html">HOME </a>                                           
 										</li>
 										<li><a href="about-me.html">ABOUT ME</a></li>
-
+										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
 										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
