--- a/endorsements.html
+++ b/endorsements.html
@@ -44,7 +44,7 @@
 							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
-																				<li class="active"><a href="index.html">HOME </a>                                           
+										<li class="active"><a href="index.html">HOME </a>                                           
 										</li>
 										<li><a href="about-me.html">ABOUT ME</a></li>
 										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
@@ -93,38 +93,83 @@
 					<div class="col-xl-5 col-lg-5">
 						<div class="about2-me-wrapper mb-30">
 							<div class="about-me-content">
-								<h1>A Milpitas Native Dedicated To Her City</h1>
+								<h1>Endorsements</h1>
 								<p>
-  I am a 3rd generation Californian, my grandparents came from Texas. They moved to California during the Great Depression of the 1930's and settled in the Central Valley. Both my parents were born in Texas. They were farm workers and owned a small farm where they planted cotton. We lived in Earlimart, a small town near Delano, where Cesar Chavez founded the UFW-United Farm Workers Union. </p>
-<br>
-<br>
-<p>
-  In 1964, my family moved to Milpitas. As a teenager, the only place to shop was the Fremont Hub. During our summer breaks, my mom would take us to pick walnuts in Irvington and the Mission District, we also cut apricots at the Weller Ranch so we could earn money to buy our school clothes. My early years gave me my hard work ethic. My mother only had a third-grade education, but she had the most common sense approach to life and I learned from her the value of hard work. I have in turn instilled those values into my children. We are three generations in this Valley.</p>
-  <br>
-  <br>
-  <strong>How It all Began</strong>
+									Rich Tran Mayor of Milpitas
+Evelyn Chua Milpitas Councilmember
+Garry Barbadillo former Milpitas Councilmember
+Bob Livengood former Milpitas Mayor, EVC Trustee
+Debbie Giordano former Milpitas Councilmember
 
-<br>
-<br>
-<p>
-  During the recession of the early 1980's, our city cut services in the Sunnyhills neighborhood where I grew up. When the economy improved, the city did not maintain Sunnyhills as they did newer neighborhoods. I felt the city was neglecting our area simply because it was an older neighborhood. Since I was a kid, I've always had an affinity towards social justice. Seeing this inequity in my neighborhood compelled me to do something about it, and that was the pivotal moment that led to my involvement in public service. I asked my good friend Bob Pecot (now deceased) if he would help me form a neighborhood group to address the needs of our neighborhood. We formed the Sunnyhills Improvement Association. Advocacy is what makes cities accountable to the people. Bob Pecot used to say, "The squeaky wheel gets the grease". I find that still holds true today. </p>  
-<br>
-<br>
-<p>
-  During this time of organizing and advocacy, I was a single mom raising two children. While working and attending San Jose State University, I had the tenacity and drive to persevere in my efforts to improve my neighborhood. It is what drew me into community service in 1992. This was the same year I graduated from SJSU with a Bachelor of Arts degree in Humanities. I then became a Teacher and have been teaching for over 27 years.
+Chappie Jones San Jose Vice Mayor 
+Kansen Chu former CA Assemblymember
+
+Jeff Rosen SCC District Attorney
+Larry Stone Santa Clara County Assessor
+Rich Santos Valley Water Trustee
+Darcy Paul Mayor of Cupertino
+Lily Mei Mayor of Fremont
+Marie Blankley Mayor of Gilroy
+Lisa Gilmore Mayor of Santa Clara
+Rob Rennie Vice Mayor of Los Gatos
+Llamar Thorpe Mayor of Antioch
+Rey Leon Mayor of Huron
+Sam Kang Mayor of Duarte
+Lynette Lee Eng Los Altos Councilmember 
+Kathy Wattanabe Santa Clara Councilmember
+Johnny Khamis former San Jose Councilmember 
+Thelma Boac Berryessa School District Trustee
+George Sanchez Franklin Mckinley Board Trustee
+Anne Sousa Campbell Councilmember
+Lisa Matichak Mountainview Councilmember
+
+Margaret Abe Koga Mountainview Councilmember
+Pat Gacoscos Union City Councilmember
+
+Joe DiSalvo County Office of Education Trustee
+
+
+
+Community and Business Members 
+Rey Rodriguez former Newark School Board Trustee
+Chuck Gary former MHS Principal
+Dipak Awasthi Milpitas Economic Dev. Commissioner
+Yu-Lan Chou Library Commissioner Chair
+Ha Phan Library Commissioner
+Hellie Mateo Library Commissioner
+Elpidio Estioko Library Commissioner
+Larry Ciradella Planning Commissioner
+Alex Galang Planning Commissioner
+Evan Gan Emergency Preparedness Commissioner
+Oscar Leon Community Advisory Commissioner
+Van Lan Truong Community Advisory Commissioner
+Jinky Peralta Community Advisory Commissioner
+Will Ector retired Berryessa Superintendent 
+Bud LoMonaco Businessman
+Ron Gonzales Hispanic Foundation, CEO
+Norma Morales MUSD Family advocate
+
+Cora Tomalinas First Five Commissioner
+
+Ruben Abrica East Palo Alto Mayor
+
+Juliette Gomez Economic Development Commissioner 
+
+Sonia Medina Planning Commissioner
+
+
+Organizations  
+
+MPOA - Milpitas Police Association
+
+Milpitas Fire Dept Local 1699
+
+MEA - Milpitas Employee Association
+
+NALC - National Association of Letter Carriers
+
 </p>
-<br>
-<br>
-<p>
-  Due to my efforts, I was invited by former Mayor Pete McHugh to serve on the Parks and Recreation Commission. From there I went on to serve on the Library Commission, and the Planning Commission. I was elected to the School Board in the year 2000-2008. I was elected to the Milpitas City Council in 2012 and served as Vice Mayer 2014-2016. I was re-elected in 2018. Most recently on the City Council, I formed two subcommittees: the Housing Subcommittee and the Transportation Subcommittee On the Housing Subcommittee, I helped create the Milpitas Assistance Program to subsidize utilities, after school care, rent mediation and a rent relief program for families facing financial hardships, and other initiatives like Beautify Milpitas, Street Sweeping Pilot Program, Mural Ordinance, Revitalization of Historic Main Street, and more... 
-</p>
-<br>
-<br>
-<strong>Now I am running for Mayor.</strong>
-<br>
-<br>
-<p>
- As the Vice Mayor of Milpitas, I have gained the experience, knowledge, and skills to lead in that capacity. In my role, I have initiated "Out of the Box" solutions and I will do the same as Mayor. I am a problem solver and will put forth innovative ideas that will enhance the quality of life for everyone. I have the Experience, the Courage, and the Tenacity to get get things done. I tend to look at the big picture and take proactive approaches when making decisions. I am ready to serve you, the citizens of Milpitas! I would be honored to have your VOTE on November 8, 2022.</p>
+  
 							</div>
 						</div>
 					</div>
