--- a/endorsements.html
+++ b/endorsements.html
@@ -95,67 +95,58 @@
 							<div class="about-me-content">
 								<h1>Endorsements</h1>
 								<p>
-									Rich Tran Mayor of Milpitas
-Evelyn Chua Milpitas Councilmember
-Garry Barbadillo former Milpitas Councilmember
-Bob Livengood former Milpitas Mayor, EVC Trustee
-Debbie Giordano former Milpitas Councilmember
-
-Chappie Jones San Jose Vice Mayor 
-Kansen Chu former CA Assemblymember
-
-Jeff Rosen SCC District Attorney
-Larry Stone Santa Clara County Assessor
-Rich Santos Valley Water Trustee
-Darcy Paul Mayor of Cupertino
-Lily Mei Mayor of Fremont
-Marie Blankley Mayor of Gilroy
-Lisa Gilmore Mayor of Santa Clara
-Rob Rennie Vice Mayor of Los Gatos
-Llamar Thorpe Mayor of Antioch
-Rey Leon Mayor of Huron
-Sam Kang Mayor of Duarte
-Lynette Lee Eng Los Altos Councilmember 
-Kathy Wattanabe Santa Clara Councilmember
-Johnny Khamis former San Jose Councilmember 
-Thelma Boac Berryessa School District Trustee
-George Sanchez Franklin Mckinley Board Trustee
-Anne Sousa Campbell Councilmember
-Lisa Matichak Mountainview Councilmember
-
-Margaret Abe Koga Mountainview Councilmember
-Pat Gacoscos Union City Councilmember
-
-Joe DiSalvo County Office of Education Trustee
-
-
-
-Community and Business Members 
-Rey Rodriguez former Newark School Board Trustee
-Chuck Gary former MHS Principal
-Dipak Awasthi Milpitas Economic Dev. Commissioner
-Yu-Lan Chou Library Commissioner Chair
-Ha Phan Library Commissioner
-Hellie Mateo Library Commissioner
-Elpidio Estioko Library Commissioner
-Larry Ciradella Planning Commissioner
-Alex Galang Planning Commissioner
-Evan Gan Emergency Preparedness Commissioner
-Oscar Leon Community Advisory Commissioner
-Van Lan Truong Community Advisory Commissioner
-Jinky Peralta Community Advisory Commissioner
-Will Ector retired Berryessa Superintendent 
-Bud LoMonaco Businessman
-Ron Gonzales Hispanic Foundation, CEO
-Norma Morales MUSD Family advocate
-
-Cora Tomalinas First Five Commissioner
-
-Ruben Abrica East Palo Alto Mayor
-
-Juliette Gomez Economic Development Commissioner 
-
-Sonia Medina Planning Commissioner
+<ol>
+<li>Rich Tran Mayor of Milpitas</li>
+<li>Evelyn Chua Milpitas Councilmember</li>
+<li>Garry Barbadillo former Milpitas Councilmember</li>
+<li>Bob Livengood former Milpitas Mayor, EVC Trustee</li>
+<li>Debbie Giordano former Milpitas Councilmember</li>
+<li>Chappie Jones San Jose Vice Mayor </li>
+<li>Kansen Chu former CA Assemblymember</li>
+<li>Jeff Rosen SCC District Attorney</li>
+<li>Larry Stone Santa Clara County Assessor</li>
+<li>Rich Santos Valley Water Trustee</li>
+<li>Darcy Paul Mayor of Cupertino</li>
+<li>Lily Mei Mayor of Fremont</li>
+<li>Marie Blankley Mayor of Gilroy</li>
+<li>Lisa Gilmore Mayor of Santa Clara</li>
+<li>Rob Rennie Vice Mayor of Los Gatos</li>
+<li>Llamar Thorpe Mayor of Antioch</li>
+<li>Rey Leon Mayor of Huron</li>
+<li>Sam Kang Mayor of Duarte</li>
+<li>Lynette Lee Eng Los Altos Councilmember </li>
+<li>Kathy Wattanabe Santa Clara Councilmember</li>
+<li>Johnny Khamis former San Jose Councilmember </li>
+<li>Thelma Boac Berryessa School District Trustee</li>
+<li>George Sanchez Franklin Mckinley Board Trustee</li>
+<li>Anne Sousa Campbell Councilmember</li>
+<li>Lisa Matichak Mountainview Councilmember</li>
+<li>Margaret Abe Koga Mountainview Councilmember</li>
+<li>Pat Gacoscos Union City Councilmember</li>
+<li>Joe DiSalvo County Office of Education Trustee</li>
+<li>Community and Business Members </li>
+<li>Rey Rodriguez former Newark School Board Trustee</li>
+<li>Chuck Gary former MHS Principal</li>
+<li>Dipak Awasthi Milpitas Economic Dev. Commissioner</li>
+<li>Yu-Lan Chou Library Commissioner Chair</li>
+<li>Ha Phan Library Commissioner</li>
+<li>Hellie Mateo Library Commissioner</li>
+<li>Elpidio Estioko Library Commissioner</li>
+<li>Larry Ciradella Planning Commissioner</li>
+<li>Alex Galang Planning Commissioner</li>
+<li>Evan Gan Emergency Preparedness Commissioner</li>
+<li>Oscar Leon Community Advisory Commissioner</li>
+<li>Van Lan Truong Community Advisory Commissioner</li>
+<li>Jinky Peralta Community Advisory Commissioner</li>
+<li>Will Ector retired Berryessa Superintendent </li>
+<li>Bud LoMonaco Businessman</li>
+<li>Ron Gonzales Hispanic Foundation, CEO</li>
+<li>Norma Morales MUSD Family advocate</li>
+<li>Cora Tomalinas First Five Commissioner</li>
+<li>Ruben Abrica East Palo Alto Mayor</li>
+<li>Juliette Gomez Economic Development Commissioner </li>
+<li>Sonia Medina Planning Commissioner</li>
+</ol>
 
 
 Organizations  
